--- a/biography.html
+++ b/biography.html
@@ -15,7 +15,7 @@
         <li><a href="#Motivation">Motivation</a></li>
         <li><a href="#Goals">Goals</a></li>
         <li><a href="#Video">Video</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
     <br>
     <br>
