Update contact link

--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <ul class="Navbar">
-        <li><a href="index.html">Biography</a></li>
-        <li><a href="index.html">Background</a></li>
-        <li><a href="index.html">Hobbies</a></li>
-        <li><a href="index.html">Motivation</a></li>
-        <li><a href="index.html">Goals</a></li>
-        <li><a href="index.html">Video</a></li>
+        <li><a href="index.html#Biography">Biography</a></li>
+        <li><a href="index.html#Background">Background</a></li>
+        <li><a href="index.html#Hobby">Hobbies</a></li>
+        <li><a href="index.html#Motivation">Motivation</a></li>
+        <li><a href="index.html#Goals">Goals</a></li>
+        <li><a href="index.html#Video">Video</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
     <br>
