Update Uppercase Social Media

--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
     <hr>
     <br>
     <p class="social-media">
-        <a href="https://www.linkedin.com/in/zakaria-niode-a39595a3/"><img src="img/linkedin.svg" alt="linkedin" style="width:35px"></a>
-        <a href="https://www.facebook.com/ari.kubis/"><img src="img/facebook.jpg" alt="facebook" style="width:35px"></a>
+        <a href="https://www.linkedin.com/in/zakaria-niode-a39595a3/"><img src="img/Linkedin.svg" alt="linkedin" style="width:35px"></a>
+        <a href="https://www.facebook.com/ari.kubis/"><img src="img/Facebook.jpg" alt="facebook" style="width:35px"></a>
         <a href="https://twitter.com/Arikubis"><img src="img/twitter.png" alt="twitter" style="width:35px"></a>
         <a href="https://id.pinterest.com/ari7scoes/"><img src="img/Pinterest.jpeg" alt="Pinterest" style="width:35px"></a>
         <a href="https://www.instagram.com/arikubis/"><img src="img/Instagram.png" alt="Instagram" style="width:35px"></a>
